--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
     <nav>
         <ul>
             <li><a href='#' [routerLink]='[""]'>Home</a></li>
-            <li><a href='#' [routerLink]='["login"]'>Login</a></li>
+            <li *ngIf='!isLogged'><a href='#' [routerLink]='["login"]'>Login</a></li>
+            <li *ngIf='isLogged'><span class='logout' (click)='logout()'>Logout</span></li>
         </ul>
     </nav>
 </header>
