--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
         <ul>
             <li><a href='#' [routerLink]='[""]'>Home</a></li>
             <li *ngIf='!isLogged'><a href='#' [routerLink]='["login"]'>Login</a></li>
+            <li *ngIf='!isLogged'><a href='#' [routerLink]='["register"]'>Register</a></li>
             <li *ngIf='isLogged'><span class='logout' (click)='logout()'>Logout</span></li>
         </ul>
     </nav>
