--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <label>
   email 
-  <input type="email" placeholder="Email" #email>
+  <input type="email" placeholder="Email" value="a@a.com" #email>
 </label>
 <label>
   Password
-  <input placeholder="Password" #password> 
+  <input placeholder="Password" value="aaa" #password> 
 </label>
 <button (click)='login(email, password)'>Login</button>
